2009-05-15  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/common.py: Add Timeout exception.
	* qm/test/result.py: Define TIMEOUT_DETAIL.
	* qm/test/target.py: Handle both.
	* qm/executable.py: Report timeouts.
	* share/qmtest/xml/report.xslt: Set cell titles for result matrix.

2009-04-27  Stefan Seefeld  <stefan@codesourcery.com>

	* share/qmtest/xml/report.xslt: Fix results calculation.

2009-04-25  Stefan Seefeld  <stefan@codesourcery.com>

	* share/qmtest/xml/report.xslt: Refine HTML report generation.
	* share/qmtest/xml/report.css: New file.
	
2009-04-24  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/report.py: Log qualified id as 'qid'.

2009-04-23  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler_test.py: Add support for CompilerTest.cleanup_executable.
	* qm/test/report.py: Fix subdirectory-handling bug.
	
2008-12-16  Stefan Seefeld  <stefan@codesourcery.com>

	* setup.py: Bump version number to 2.4.1.
	* qmtest.spec: New rpm spec-file.
	* NEWS: Mention 2.4.1 release.
	* README: Clarify license version.

2008-12-10  Stefan Seefeld  <stefan@codesourcery.com>

	* setup.py: Install LICENSE.OPL so it can be found by users.
	* MAKEFILE.in: Likewise.
	* doc/qmtest.ent: bump version number to 2.4.1
	* qmdist/command/check.py: Fix Python 3k incompatibility.
	* qmdist/command/build_scripts.py: Likewise.
	* qm/test/cmdline.py: Likewise.
	* qm/web.py: Likewise.
	* qm/platform_unix.py: Likewise.

2008-11-16  Stefan Seefeld  <stefan@codesourcery.com>

	* LICENSE.OPL: New file.
	* doc/qm.mod: Fix OPL license reference.
	* doc/tutorial.xml: Likewise.
	* doc/cli_reference.xml: Likewise.
	* doc/concepts.xml: Likewise.
	* doc/customizing.xml: Likewise.
	* doc/extending.xml: Likewise.
	* templates/docbook-chapter: Likewise.
	* templates/docbook: Likewise.
	* doc/design/qmtest/core.xml: Likewise.
	* doc/design/qmtest/iface.xml: Likewise.
	* doc/design/qmtest/impl.xml: Likewise.
	* doc/design/qmtest/qmtest.xml: Likewise.