@@ -1,3 +1,7 @@
+2011-01-31  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/test/classes/compiler_test.py: Fix handling of _compiler_dirs.
+
 2009-05-15  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/common.py: Add Timeout exception.
